--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
-    id 'net.minecraftforge.gradleutils' version '2.+'
+    id 'ml.darubyminer360.gradleutils' version 'main-SNAPSHOT'
     id 'org.javamodularity.moduleplugin' version '1.8.7' apply false
 }
 
@@ -11,7 +11,7 @@ apply plugin: 'org.javamodularity.moduleplugin'
 
 group 'net.minecraftforge'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(16)
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 version = gradleutils.getTagOffsetVersion()
 
@@ -42,10 +42,12 @@ compileTestJava {
 }
 
 repositories {
+    mavenCentral()
     maven {
         name = 'forge'
-        url = 'https://maven.minecraftforge.net/'
+        url = 'https://maven.minecraftforge.net'
     }
+    maven { url = 'https://jitpack.io' }
 }
 
 sourceSets {
@@ -70,7 +72,7 @@ dependencies {
     implementation("org.ow2.asm:asm-commons:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-tree:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-util:${ASM_VERSION}")
-    implementation('net.minecraftforge:forgespi:4.0.+')
+    implementation('com.github.CloudLoaderMC:CloudSPI:6.2')
     implementation('org.openjdk.nashorn:nashorn-core:15.1.1')
 }
 
@@ -111,16 +113,16 @@ publishing {
                 from components.java
                 artifact sourcesJar
                 name = 'Core Mods'
-                description = 'Core modding framework for use with forge'
-                url = 'https://github.com/MinecraftForge/coremods'
+                description = 'Core modding framework for use with Cloud'
+                url = 'https://github.com/CloudLoaderMC/coremods'
                 scm {
-                    url = 'https://github.com/MinecraftForge/coremods'
-                    connection = 'scm:git:git://github.com/MinecraftForge/coremods.git'
-                    developerConnection = 'scm:git:git@github.com:MinecraftForge/coremods.git'
+                    url = 'https://github.com/CloudLoaderMC/coremods'
+                    connection = 'scm:git:git://github.com/CloudLoaderMC/coremods.git'
+                    developerConnection = 'scm:git:git@github.com:CloudLoaderMC/coremods.git'
                 }
                 issueManagement {
                     system = 'github'
-                    url = 'https://github.com/MinecraftForge/coremods/issues'
+                    url = 'https://github.com/CloudLoaderMC/coremods/issues'
                 }
 
                 licenses {
@@ -132,14 +134,11 @@ publishing {
 
                 developers {
                     developer {
-                        id = 'cpw'
-                        name = 'cpw'
+                        id = 'DaRubyMiner360'
+                        name = 'DaRubyMiner360'
                     }
                 }
             }
         }
-    }
-    repositories {
-        maven gradleutils.getPublishingForgeMaven()
     }
 }
