--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
+import ml.darubyminer360.gradleutils.GradleUtils
+
 plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
-    id 'ml.darubyminer360.gradleutils' version 'main-SNAPSHOT'
+    id 'ml.darubyminer360.gradleutils' version '2.2.0'
     id 'org.javamodularity.moduleplugin' version '1.8.7' apply false
 }
 
@@ -9,7 +11,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
 apply plugin: 'org.javamodularity.moduleplugin'
 
-group 'net.minecraftforge'
+group 'ml.cloudmc'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -44,10 +46,13 @@ compileTestJava {
 repositories {
     mavenCentral()
     maven {
+        name = 'Cloud'
+        url = 'https://maven.cloudmc.ml/releases'
+    }
+    maven {
         name = 'forge'
         url = 'https://maven.minecraftforge.net'
     }
-    maven { url = 'https://jitpack.io' }
 }
 
 sourceSets {
@@ -72,7 +77,7 @@ dependencies {
     implementation("org.ow2.asm:asm-commons:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-tree:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-util:${ASM_VERSION}")
-    implementation('com.github.CloudLoaderMC:CloudSPI:6.2')
+    implementation('ml.cloudmc:CloudSPI:6.5.0')
     implementation('org.openjdk.nashorn:nashorn-core:15.1.1')
 }
 
@@ -114,21 +119,21 @@ publishing {
                 artifact sourcesJar
                 name = 'Core Mods'
                 description = 'Core modding framework for use with Cloud'
-                url = 'https://github.com/CloudLoaderMC/coremods'
+                url = 'https://github.com/CloudLoaderMC/CoreMods'
                 scm {
-                    url = 'https://github.com/CloudLoaderMC/coremods'
-                    connection = 'scm:git:git://github.com/CloudLoaderMC/coremods.git'
-                    developerConnection = 'scm:git:git@github.com:CloudLoaderMC/coremods.git'
+                    url = 'https://github.com/CloudLoaderMC/CoreMods'
+                    connection = 'scm:git:git://github.com/CloudLoaderMC/CoreMods.git'
+                    developerConnection = 'scm:git:git@github.com:CloudLoaderMC/CoreMods.git'
                 }
                 issueManagement {
                     system = 'github'
-                    url = 'https://github.com/CloudLoaderMC/coremods/issues'
+                    url = 'https://github.com/CloudLoaderMC/CoreMods/issues'
                 }
 
                 licenses {
                     license {
-                        name = 'LGPLv2.1'
-                        url = 'https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt'
+                        name = 'Apache 2.0'
+                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
 
@@ -140,5 +145,8 @@ publishing {
                 }
             }
         }
+    }
+    repositories {
+        maven GradleUtils.getPublishingCloudMaven(project)
     }
 }
