--- a/build.gradle
+++ b/build.gradle
@@ -71,13 +71,13 @@ dependencies {
     compileOnly('org.jetbrains:annotations:21.0.1')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.+')
     testRuntimeOnly(sourceSets.testJars.output)
-    implementation('cpw.mods:modlauncher:9.0.+')
+    implementation('ml.cloudmc:ModLauncher:10.0.11')
     implementation('org.apache.logging.log4j:log4j-api:2.14.1')
     implementation("org.ow2.asm:asm:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-commons:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-tree:${ASM_VERSION}")
     implementation("org.ow2.asm:asm-util:${ASM_VERSION}")
-    implementation('ml.cloudmc:CloudSPI:6.5.0')
+    implementation('ml.cloudmc:CloudSPI:6.5.2')
     implementation('org.openjdk.nashorn:nashorn-core:15.1.1')
 }
 
